--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>潘瑞英</h1>
         <div class="dt">
-            <img src="E:\java\hello\001.jpg" width="200px">
+            <img src="001.jpg" width="200px">
         </div>
   
      <hr>   </hr> 
